--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Aditya Singh",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0"
   },
   "devDependencies": {
